--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@opentelemetry/api": "1.2.0",
+    "@opentelemetry/exporter-collector": "0.25.0",
+    "@opentelemetry/instrumentation": "0.33.0",
+    "@opentelemetry/instrumentation-document-load": "0.30.0",
+    "@opentelemetry/resources": "1.7.0",
+    "@opentelemetry/sdk-trace-base": "1.7.0",
+    "@opentelemetry/sdk-trace-web": "1.7.0",
+    "@opentelemetry/semantic-conventions": "1.7.0",
     "@tanstack/react-query": "4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
