--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,9 +17,6 @@
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "13.5.0",
     "@types/jest": "27.5.2",
     "@types/node": "16.11.68",
     "@types/react": "18.0.21",
@@ -35,8 +32,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
