--- a/packages/service-user/package.json
+++ b/packages/service-user/package.json
@@ -5,9 +5,18 @@
   "main": "index.js",
   "license": "ISC",
   "scripts": {
-    "start": "nodemon ./src/index.ts"
+    "start": "nodemon --exec \"ts-node -r ./src/tracer.ts\" ./src/index.ts"
   },
   "dependencies": {
+    "@opentelemetry/exporter-trace-otlp-http": "0.33.0",
+    "@opentelemetry/instrumentation": "0.33.0",
+    "@opentelemetry/instrumentation-fastify": "0.30.0",
+    "@opentelemetry/instrumentation-http": "0.33.0",
+    "@opentelemetry/resources": "1.7.0",
+    "@opentelemetry/sdk-node": "0.33.0",
+    "@opentelemetry/sdk-trace-base": "1.7.0",
+    "@opentelemetry/sdk-trace-node": "1.7.0",
+    "@opentelemetry/semantic-conventions": "1.7.0",
     "fastify": "4.9.2",
     "tiny-invariant": "1.3.1"
   },
