--- a/packages/service-user/package.json
+++ b/packages/service-user/package.json
@@ -17,6 +17,7 @@
     "@opentelemetry/sdk-trace-base": "1.7.0",
     "@opentelemetry/sdk-trace-node": "1.7.0",
     "@opentelemetry/semantic-conventions": "1.7.0",
+    "dotenv": "16.0.3",
     "fastify": "4.9.2",
     "tiny-invariant": "1.3.1"
   },
