--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,6 +21,7 @@
     "@types/node": "16.11.68",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "http-proxy-middleware": "2.0.6",
     "react-scripts": "5.0.1",
     "typescript": "4.8.4"
   },
@@ -46,6 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:9000"
+  }
 }
