--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -19,7 +19,8 @@
     "@tanstack/react-query": "4.13.4",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "3.19.1"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
